--- a/Application/Home/View/themes/User/index.html
+++ b/Application/Home/View/themes/User/index.html
@@ -78,7 +78,7 @@
 					<dl>
 						<dt><img src="__PUBLIC__/Home/images/pcRHead.gif" alt="用户头像" title="双击更换头像"/></dt>
 						<dd>
-							<p>XXXXXXXXX</p>
+							<p>{$conn.id|get_username}</p>
 							<p>上次登录：2015-07-03 16:56:33</p>
 							<ul>
 								<li><a href="javascript:;"><img src="__PUBLIC__/Home/images/bankNo.gif" alt="银行卡未绑定" title="银行卡未绑定"/></a></li>
