--- a/Application/Home/View/themes/Public/top.html
+++ b/Application/Home/View/themes/Public/top.html
@@ -8,6 +8,7 @@
 					<p>欢迎来到工合财富！</p>
 					<a href="{:U('User/index')}">Hi, {:get_username()}</a>
 					<a href="{:U('User/logout')}" class="ZC">|安全退出</a>
+					<a href="{:U('User/msglist')}" class="ZC">消息{:is_msg()}</a>
 				</div>
 				<else/>
 				<div class="barLeft">
