--- a/Application/Home/View/themes/Public/top.html
+++ b/Application/Home/View/themes/Public/top.html
@@ -46,7 +46,7 @@
 					<li><a href="{:U('Products/index')}">产品中心</a></li>
 					<li><a href="{:U('Transfer/index')}">转让中心</a></li>
 					<li><a href="{:U('User/index')}">个人中心</a></li>
-					<li><a href="javascript:;">新手指南</a></li>
+					<li><a href="{:U('Index/newguide')}">新手指南</a></li>
 				</ul>
 			</div>
 		</div>
