--- a/Application/Admin/View/themes/Index/index.html
+++ b/Application/Admin/View/themes/Index/index.html
@@ -22,7 +22,7 @@
 	                        <li>
 	                            <div class="dropdown-messages-box">
 	                                <a href="profile.html" class="pull-left">
-	                                    <img alt="image" class="img-circle" src="img/a7.jpg">
+	                                    <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/a7.jpg">
 	                                </a>
 	                                <div class="media-body">
 	                                    <small class="pull-right">46小时前</small>
@@ -36,7 +36,7 @@
 	                        <li>
 	                            <div class="dropdown-messages-box">
 	                                <a href="profile.html" class="pull-left">
-	                                    <img alt="image" class="img-circle" src="img/a4.jpg">
+	                                    <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/a4.jpg">
 	                                </a>
 	                                <div class="media-body ">
 	                                    <small class="pull-right text-navy">25小时前</small>
@@ -291,7 +291,7 @@
 
 	                                        <div class="feed-element">
 	                                            <a href="profile.html" class="pull-left">
-	                                                <img alt="image" class="img-circle" src="img/profile.jpg">
+	                                                <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/profile.jpg">
 	                                            </a>
 	                                            <div class="media-body ">
 	                                                <small class="pull-right">5分钟前</small>
@@ -304,7 +304,7 @@
 
 	                                        <div class="feed-element">
 	                                            <a href="profile.html" class="pull-left">
-	                                                <img alt="image" class="img-circle" src="img/a2.jpg">
+	                                                <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/a2.jpg">
 	                                            </a>
 	                                            <div class="media-body ">
 	                                                <small class="pull-right">2个月前</small>
@@ -315,7 +315,7 @@
 	                                        </div>
 	                                        <div class="feed-element">
 	                                            <a href="profile.html" class="pull-left">
-	                                                <img alt="image" class="img-circle" src="img/a3.jpg">
+	                                                <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/a3.jpg">
 	                                            </a>
 	                                            <div class="media-body ">
 	                                                <small class="pull-right">2小时前</small>
@@ -326,7 +326,7 @@
 	                                        </div>
 	                                        <div class="feed-element">
 	                                            <a href="profile.html" class="pull-left">
-	                                                <img alt="image" class="img-circle" src="img/a5.jpg">
+	                                                <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/a5.jpg">
 	                                            </a>
 	                                            <div class="media-body ">
 	                                                <small class="pull-right">32分钟前</small>
@@ -489,10 +489,10 @@
 	            </div>
 	            <div class="footer">
 	                <div class="pull-right">
-	                    By：<a href="http://www.zi-han.net" target="_blank">zihan's blog</a>
+	                    By：<a href="http://www.zi-han.net" target="_blank">BY :投富宝开发团队</a>
 	                </div>
 	                <div>
-	                    <strong>Copyright</strong> H+ &copy; 2014
+	                    <strong>Copyright</strong>深圳市工合互联网信息服务有限公司&copy; 2014-2015
 	                </div>
 	            </div>
 	        </div>
