--- a/Application/Admin/View/themes/Public/head.html
+++ b/Application/Admin/View/themes/Public/head.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
 
-    <title>蓝搜网络www.lansou.net - 主页</title>
+    <title>工合投富宝</title>
     <meta name="keywords" content="#">
     <meta name="description" content="#">
     <!-- Gritter -->
@@ -22,6 +22,7 @@
     <link href="__PUBLIC__/Admin/css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/css/plugins/summernote/summernote.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/css/plugins/summernote/summernote-bs3.css" rel="stylesheet">
+
     <!-- Mainly scripts -->
     <script src="__PUBLIC__/Admin/js/jquery-2.1.1.min.js"></script>
     <script src="__PUBLIC__/Admin/js/bootstrap.min.js?v=3.4.0"></script>
@@ -61,12 +62,20 @@
 	<script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
     <script src="__PUBLIC__/Admin/js/plugins/iCheck/icheck.min.js"></script>
 
-
     <!-- SUMMERNOTE -->
     <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote.min.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote-zh-CN.js"></script>
+    
 
+    <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.symbol.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/flot/curvedLines.js"></script>
+    <!-- Jvectormap -->
+    <script src="__PUBLIC__/Admin/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    
 
+    <!-- ChartJS-->
+    <script src="__PUBLIC__/Admin/js/plugins/chartJs/Chart.min.js"></script>
 </head>
 
 </html>
