--- a/Application/Home/View/themes/Base/common.html
+++ b/Application/Home/View/themes/Base/common.html
@@ -8,8 +8,14 @@
 <body>
 	<!--头部-->
 	<include file="Public:top"/>
-	<!-- 中间内容 -->
-	<include file="Public:body"/>
+	<div class="pc">
+		<!-- 个人中心左侧栏 -->
+		<include file="Public:left"/>
+		<!-- 中间内容 -->
+		<include file="Public:body"/>
+	</div>
+	
+
 	<!-- 底部 -->
 	<include file="Public:footer"/>
 
