--- a/Application/Home/View/themes/Index/index.html
+++ b/Application/Home/View/themes/Index/index.html
@@ -1,5 +1,6 @@
-<block name="body">
-<extend name="Base/common"/>
+	<include file="Public:head"/>
+	<!--头部-->
+	<include file="Public:top"/>
 			<!--轮播图	banner start-->
 		<div class="banOut">
 			<!--banner start-->
@@ -422,4 +423,4 @@
 			<a href="javascript:;"></a>
 		</div>
 		<!--立即体验	taste end-->
-</block>
+		<include file="Public:footer"/>
