--- a/Application/Home/View/themes/Index/newguide.html
+++ b/Application/Home/View/themes/Index/newguide.html
@@ -1,4 +1,6 @@
-	<block name="body"><extend name="Base/common"/>
+	<include file="Public:head"/>
+	<!--头部-->
+	<include file="Public:top"/>
 				<!--新手指南		guide	start-->
 		<div class="guide">
 			<!--guideTop	start-->
@@ -343,5 +345,4 @@
 			<!--guideCon	end-->
 		</div>
 		<!--新手指南		guide	end-->
-
-	</block>
+<include file="Public:footer"/>
