--- a/Application/Home/View/themes/Products/index.html
+++ b/Application/Home/View/themes/Products/index.html
@@ -1,4 +1,6 @@
-	<block name="body"><extend name="Base/common"/>
+	<include file="Public:head"/>
+	<!--头部-->
+	<include file="Public:top"/>
 		<!--产品中心		prod start-->
 		<!--分类		sort01	start-->
 		<div class="sort01">
@@ -205,4 +207,4 @@
 			</ul>
 		</div>
 		<!--产品中心		prod end-->
-	</block>
+<include file="Public:footer"/>
