--- a/Application/Home/View/themes/Transfer/index.html
+++ b/Application/Home/View/themes/Transfer/index.html
@@ -1,4 +1,6 @@
-	<block name="body"><extend name="Base/common"/>
+	<include file="Public:head"/>
+	<!--头部-->
+	<include file="Public:top"/>
 		<!--转让中心		attorn start-->		
 		<!--分类		sort001	start-->
 		<div class="sort001">
@@ -192,4 +194,4 @@
 			</ul>
 		</div>
 		<!--产品中心		prod end-->
-	</block>
+		<include file="Public:footer"/>
