--- a/Application/Home/View/themes/User/register.html
+++ b/Application/Home/View/themes/User/register.html
@@ -1,4 +1,6 @@
-	<block name="body"><extend name="Base/common"/>
+<include file="Public:head"/>
+<include file="Public:top"/>
+
 				<!--注册内容	register start-->
 		<div class="register">
 			<!--registerTop start-->
@@ -72,4 +74,4 @@
 	    }  
 	});
 </script>
-	</block>
+<include file="Public:footer"/>
